--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.x",
+    "@tailwindcss/vite": "^4.1.12",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "antd": "^5.27.1",
-    "plugin-fs": "link:@tauri-apps\\plugin-fs",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
