--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,3 +18,4 @@ tauri-plugin-opener = "2.1.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
 tauri-plugin-fs = "2"
+tauri-plugin-http = "2"
