--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,3 +19,14 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
 tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
+winreg = "0.52" # 用于修改注册表
+anyhow = "1.0"  # 用于错误处理
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.58", features = [
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Registry",
+    "Win32_NetworkManagement_IpHelper",
+    "Win32_Networking_WinInet",
+    "Win32_Foundation"
+] }
