--- a/src-tauri/resources/config.json
+++ b/src-tauri/resources/config.json
@@ -3,30 +3,62 @@
     "level": "info",
     "timestamp": true
   },
-
   "dns": {
     "servers": [
       {
-        "tag": "local-dns",
-        "address": "8.8.8.8",
+        "tag": "dns-local",
+        "address": "223.5.5.5",
         "detour": "direct"
+      },
+      {
+        "tag": "dns-remote",
+        "address": "8.8.8.8",
+        "detour": "proxy"
       }
-    ]
+    ],
+    "rules": [
+      {
+        "outbound": "any",
+        "server": "dns-local"
+      },
+      {
+        "geosite": "cn",
+        "server": "dns-local"
+      },
+      {
+        "geosite": "geolocation-!cn",
+        "server": "dns-remote"
+      }
+    ],
+    "strategy": "ipv4_only"
   },
-
   "inbounds": [
     {
       "type": "mixed",
-      "tag": "socks-in",
+      "tag": "mixed-in",
       "listen": "127.0.0.1",
-      "listen_port": 1080
+      "listen_port": 1080,
+      "sniff": true,
+      "set_system_proxy": false
     }
   ],
-
   "outbounds": [
+    {
+      "type": "selector",
+      "tag": "proxy",
+      "outbounds": [
+        "SS-Taiwan-03",
+        "direct"
+      ],
+      "default": "SS-Taiwan-03"
+    },
     {
       "type": "direct",
       "tag": "direct"
+    },
+    {
+      "type": "dns",
+      "tag": "dns-out"
     },
     {
       "type": "shadowsocks",
@@ -37,17 +69,20 @@
       "password": "111800b4-bea9-44af-b1bf-32fb3d1271c4"
     }
   ],
-
   "route": {
     "rules": [
       {
-        "port": 53,
-        "network": "udp",
-        "outbound": "local-dns"
+        "protocol": "dns",
+        "outbound": "dns-out"
       },
       {
-        "domain": ["chat.deepseek.com"],
+        "geosite": "cn",
+        "geoip": "cn",
         "outbound": "direct"
+      },
+      {
+        "geosite": "geolocation-!cn",
+        "outbound": "proxy"
       },
       {
         "ip_cidr": [
@@ -57,14 +92,8 @@
           "192.168.0.0/16"
         ],
         "outbound": "direct"
-      },
-      {
-        "domain": ["google.com", "youtube.com"],
-        "outbound": "SS-Taiwan-03"
-      },
-      {
-        "outbound": "SS-Taiwan-03"
       }
-    ]
+    ],
+    "auto_detect_interface": true
   }
 }
