--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "~2",
+    "@tauri-apps/plugin-store": "~2",
     "antd": "^5.27.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "js-base64": "^3.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.8.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12",
     "tools-browser": "^1.0.2"
   },
