--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,20 +13,21 @@ crate-type = ["rlib"]
 tauri-build = { version = "2.4.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.4.0", features = [] }
+tauri = { version = "2.4.0", features = ["tray-icon"] }
 tauri-plugin-opener = "2.1.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
 tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
-winreg = "0.52" # 用于修改注册表
-anyhow = "1.0"  # 用于错误处理
-
-[target.'cfg(windows)'.dependencies]
-windows = { version = "0.58", features = [
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_System_Registry",
-    "Win32_NetworkManagement_IpHelper",
-    "Win32_Networking_WinInet",
-    "Win32_Foundation"
-] }
+tauri-plugin-shell = "2"
+tauri-plugin-store = "2"
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+rss = "2.0"
+tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+log = "0.4"
+base64 = "0.21" 
+url = "2.4" 
+uuid = { version = "1.4", features = ["v4"] }
+urlencoding = "2.1"
+sysproxy = "0.2"
