--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-store = "2"
+tauri-plugin-autostart = "2.0.0"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 rss = "2.0"
 tokio = { version = "1", features = ["full"] }
