--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "5.x",
     "@tailwindcss/vite": "^4.1.12",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-autostart": "^2.5.1",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-opener": "^2",
@@ -27,7 +28,9 @@
     "react-router": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12",
-    "tools-browser": "^1.0.2"
+    "tools-browser": "^1.0.2",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
