--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,3 +32,6 @@ url = "2.4"
 uuid = { version = "1.4", features = ["v4"] }
 urlencoding = "2.1"
 sysproxy = "0.2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2"
