--- a/.github/workflows/tauri-tag-build.yml
+++ b/.github/workflows/tauri-tag-build.yml
@@ -20,28 +20,34 @@ jobs:
           # Windows builds
           - platform: 'windows-latest'
             args: '--target x86_64-pc-windows-msvc'
+            rust_target: 'x86_64-pc-windows-msvc'
             singbox_arch: 'windows-amd64'
             singbox_name: 'singbox-x86_64-pc-windows-msvc.exe'
           - platform: 'windows-latest'
             args: '--target i686-pc-windows-msvc'
+            rust_target: 'i686-pc-windows-msvc'
             singbox_arch: 'windows-386'
             singbox_name: 'singbox-i686-pc-windows-msvc.exe'
           - platform: 'windows-latest'
             args: '--target aarch64-pc-windows-msvc'
+            rust_target: 'aarch64-pc-windows-msvc'
             singbox_arch: 'windows-arm64'
             singbox_name: 'singbox-aarch64-pc-windows-msvc.exe'
           # macOS builds
           - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin'
+            rust_target: 'aarch64-apple-darwin'
             singbox_arch: 'darwin-arm64'
             singbox_name: 'singbox-aarch64-apple-darwin'
           - platform: 'macos-latest'
             args: '--target x86_64-apple-darwin'
+            rust_target: 'x86_64-apple-darwin'
             singbox_arch: 'darwin-amd64'
             singbox_name: 'singbox-x86_64-apple-darwin'
           # Linux builds
           - platform: 'ubuntu-22.04'
             args: ''
+            rust_target: ''
             singbox_arch: 'linux-amd64'
             singbox_name: 'singbox-x86_64-unknown-linux-gnu'
 
@@ -84,7 +90,7 @@ jobs:
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+          targets: ${{ matrix.rust_target }}
 
       - name: Rust cache
         uses: swatinem/rust-cache@v2
