--- a/.github/workflows/tauri-tag-build.yml
+++ b/.github/workflows/tauri-tag-build.yml
@@ -34,22 +34,22 @@ jobs:
             singbox_arch: 'windows-arm64'
             singbox_name: 'singbox-aarch64-pc-windows-msvc.exe'
           # macOS builds
-          - platform: 'macos-latest'
-            args: '--target aarch64-apple-darwin'
-            rust_target: 'aarch64-apple-darwin'
-            singbox_arch: 'darwin-arm64'
-            singbox_name: 'singbox-aarch64-apple-darwin'
-          - platform: 'macos-latest'
-            args: '--target x86_64-apple-darwin'
-            rust_target: 'x86_64-apple-darwin'
-            singbox_arch: 'darwin-amd64'
-            singbox_name: 'singbox-x86_64-apple-darwin'
+          # - platform: 'macos-latest'
+          #   args: '--target aarch64-apple-darwin'
+          #   rust_target: 'aarch64-apple-darwin'
+          #   singbox_arch: 'darwin-arm64'
+          #   singbox_name: 'singbox-aarch64-apple-darwin'
+          # - platform: 'macos-latest'
+          #   args: '--target x86_64-apple-darwin'
+          #   rust_target: 'x86_64-apple-darwin'
+          #   singbox_arch: 'darwin-amd64'
+          #   singbox_name: 'singbox-x86_64-apple-darwin'
           # Linux builds
-          - platform: 'ubuntu-22.04'
-            args: ''
-            rust_target: ''
-            singbox_arch: 'linux-amd64'
-            singbox_name: 'singbox-x86_64-unknown-linux-gnu'
+          # - platform: 'ubuntu-22.04'
+          #   args: ''
+          #   rust_target: ''
+          #   singbox_arch: 'linux-amd64'
+          #   singbox_name: 'singbox-x86_64-unknown-linux-gnu'
 
     runs-on: ${{ matrix.platform }}
     steps:
