--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "morph",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-store": "~2",
+    "@tauri-apps/plugin-updater": "~2.9.0",
     "antd": "^5.27.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
