--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["rlib"]
 tauri-build = { version = "2.4.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.4.0", features = ["tray-icon"] }
+tauri = { version = "2.4.0", features = ["tray-icon", "devtools"] }
 tauri-plugin-opener = "2.1.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
