--- a/.github/workflows/tauri-tag-build.yml
+++ b/.github/workflows/tauri-tag-build.yml
@@ -121,4 +121,5 @@ jobs:
           releaseBody: ${{ steps.release_notes.outputs.body }}
           releaseDraft: true
           prerelease: false
+          updaterJsonPreferNsis: true
           args: ${{ matrix.args }}
