chore: release 0.1.7 and enable updater json

--- a/.github/workflows/tauri-tag-build.yml
+++ b/.github/workflows/tauri-tag-build.yml
@@ -121,5 +121,6 @@ jobs:
           releaseBody: ${{ steps.release_notes.outputs.body }}
           releaseDraft: true
           prerelease: false
+          updaterJson: true
           updaterJsonPreferNsis: true
           args: ${{ matrix.args }}
